# CppTemplate

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  annotated.html  annotated_dup.js  classes.html  classmyProject_1_1core_1_1Greeter-members.html  classmyProject_1_1core_1_1Greeter.html  dir_232ab8dc75117fda122ab855789b1b2c.html  dir_25de89a49d1da2858ac6330785c12b40.html  dir_25de89a49d1da2858ac6330785c12b40.js  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.js  dir_6f77a39b07c019ccd7492ea87272f732.html  dir_6f77a39b07c019ccd7492ea87272f732.js  dir_853eb5894e3f1e378bbdbfc32cfe09c2.html  dir_853eb5894e3f1e378bbdbfc32cfe09c2.js  dir_cf1c8dab78eb4f4ad70b3f7829393dc7.html  dir_cf1c8dab78eb4f4ad70b3f7829393dc7.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  greeter_8h_source.html  index.html  index.js  navtreedata.js  navtreeindex0.js  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  coverage.yaml  documentation.yaml  lint.yaml  test.yaml  ubuntu.yaml
.gitlab-ci/: build.yml  lint.yml  pages.yml
apps/: CMakeLists.txt
apps/cli/: CMakeLists.txt  main.cpp
cmake/: Doxygen.cmake
docs/: CMakeLists.txt  Doxyfile.in
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/prj/core/: greeter.h
libs/core/src/: greeter.cpp
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_core.cpp
